# ravintolasovellus

./: .gitignore  README.md  map-testing-notebook.ipynb  pyproject.toml  tasks.py
Documentation/: class.md  output_schema.md
src/: app.py  config.py  db_filler.py  db_module.py  db_setup.py  filters.py  load_db.py  map_service.py  postgres_setup.py  routes.py  schema.sql
src/routing/: accounts.py  buffets.py  events.py  ratings.py  restaurants.py
src/service/: convert_address.py  helper_service.py  map_service.py  validation_service.py
src/static/: style.css
src/templates/: accounts_edit.html  accounts_list.html  accounts_new.html  accounts_single.html  accounts_single_private.html  accounts_single_public.html  buffets_list.html  buffets_new.html  buffets_single.html  events_list.html  events_new.html  events_single.html  index.html  layout.html  list_accounts.html  list_restaurants.html  map.html  map_page.html  ratings_list.html  ratings_new.html  ratings_single.html  restaurants_edit.html  restaurants_list.html  restaurants_new.html  restaurants_single.html  single_restaurant.html  test_map_markers.html
